--- a/client-app/src/app/layout/style.css
+++ b/client-app/src/app/layout/style.css
@@ -14,7 +14,7 @@ body {
 .react-calendar {
   width: 100%;
   border: none;
-  box-lines: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
+  box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
 }
 
 /*home page styles*/
@@ -47,3 +47,7 @@ body {
 }
 
 /*end home page styles*/
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
